--- a/ansible/Vagrantfile
+++ b/ansible/Vagrantfile
@@ -38,6 +38,39 @@ Vagrant.configure(2) do |config|
       end
     end
 
+   config.vm.define "bridge" do |bridge|
+      bridge.vm.box =  "ubuntu/trusty64"
+
+      # eth1 and eth2 connected to rtr1  and  eth3 and eth4  connected to rtr2
+      # auto_config is not supported for XR, set to false
+
+      bridge.vm.network :private_network, virtualbox__intnet: "link1", auto_config: false
+      bridge.vm.network :private_network, virtualbox__intnet: "link2", auto_config: false
+
+      bridge.vm.network :private_network, virtualbox__intnet: "link3", auto_config: false
+      bridge.vm.network :private_network, virtualbox__intnet: "link4", auto_config: false
+
+      # Important! For this node to act as a bridge, All the virtualbox interfaces must be in promiscuous mode.
+      bridge.vm.provider :virtualbox do |vb|
+        vb.customize ["modifyvm", :id, "--nicpromisc2", "allow-all"]
+        vb.customize ["modifyvm", :id, "--nicpromisc3", "allow-all"]
+        vb.customize ["modifyvm", :id, "--nicpromisc4", "allow-all"]
+        vb.customize ["modifyvm", :id, "--nicpromisc5", "allow-all"]
+      end
+
+      # Set up the bridge interfaces
+      bridge.vm.provision "setup_bridge", type: "shell" do |s|
+          s.path =  "scripts/bridge_setup.sh"
+      end
+
+      # Transfer all the impairment helper scripts to cause network degradation, later
+      bridge.vm.provision "transfer_ref_impair", type: "file", source: "scripts/impair_reference.sh", destination: "/home/vagrant/impair_reference.sh"
+      bridge.vm.provision "transfer_bkp_impair", type: "file", source: "scripts/impair_backup.sh", destination: "/home/vagrant/impair_backup.sh"
+      bridge.vm.provision "transfer_stop_impair", type: "file", source: "scripts/stop_impair.sh", destination: "/home/vagrant/stop_impair.sh"
+
+    end
+
+
    config.vm.define "rtr2" do |rtr2|
       rtr2.vm.box =  "IOS-XRv"
 
@@ -66,60 +99,34 @@ Vagrant.configure(2) do |config|
     end
 
 
-   config.vm.define "bridge" do |bridge|
-      bridge.vm.box =  "ubuntu/trusty64"
+  config.vm.define "devbox" do |devbox|
+    devbox.vm.box = "ubuntu/trusty64"
 
-      http_proxy = ENV['http_proxy']
-      https_proxy = ENV['https_proxy']
-
-      # eth1 and eth2 connected to rtr1  and  eth3 and eth4  connected to rtr2
-      # auto_config is not supported for XR, set to false
-
-      bridge.vm.network :private_network, virtualbox__intnet: "link1", auto_config: false
-      bridge.vm.network :private_network, virtualbox__intnet: "link2", auto_config: false
-
-      bridge.vm.network :private_network, virtualbox__intnet: "link3", auto_config: false
-      bridge.vm.network :private_network, virtualbox__intnet: "link4", auto_config: false
-
-      # Important! For this node to act as a bridge, All the virtualbox interfaces must be in promiscuous mode.
-      bridge.vm.provider :virtualbox do |vb|
-        vb.customize ["modifyvm", :id, "--nicpromisc2", "allow-all"]
-        vb.customize ["modifyvm", :id, "--nicpromisc3", "allow-all"]
-        vb.customize ["modifyvm", :id, "--nicpromisc4", "allow-all"]
-        vb.customize ["modifyvm", :id, "--nicpromisc5", "allow-all"]
-        vb.memory = 2048
-      end
-
-      bridge.vm.provision "file", source: "configs/ansible_env", destination:"/home/vagrant/ansible_env"
-
-      # Set up the bridge interfaces
-      bridge.vm.provision "setup_bridge", type: "shell" do |s|
-          s.path =  "scripts/bridge_setup.sh"
-      end
-
-      # Transfer all the impairment helper scripts to cause network degradation, later
-      bridge.vm.provision "transfer_ref_impair", type: "file", source: "scripts/impair_reference.sh", destination: "/home/vagrant/impair_reference.sh"
-      bridge.vm.provision "transfer_bkp_impair", type: "file", source: "scripts/impair_backup.sh", destination: "/home/vagrant/impair_backup.sh"
-      bridge.vm.provision "transfer_stop_impair", type: "file", source: "scripts/stop_impair.sh", destination: "/home/vagrant/stop_impair.sh"
-
-
-      bridge.vm.provision "setup_ansible", privileged: false, type: "shell" do |s|
-          s.path = "scripts/ansible_setup.sh"
-          s.args = '#{http_proxy} #{https_proxy}'
-      end
-
-      # Transfer script to apply public keys to XR that can be run later
-
-      bridge.vm.provision "transfer_apply_pubkey_sh", type: "file", source: "scripts/transfer_keys.py", destination: "/home/vagrant/transfer_keys.py"
-
-      bridge.vm.provision "trigger" do |trigger|
-        trigger.fire do
-          run "scripts/get_port_list.sh"
-          run_remote "python /home/vagrant/transfer_keys.py"
-        end
-      end
-
+    devbox.vm.provider :virtualbox do |vb|
+      vb.memory = 2048 
     end
 
+    devbox.vm.provision "file", source: "configs/ansible_env", destination:"/home/vagrant/ansible_env"
 
+
+    http_proxy = ENV['http_proxy']
+    https_proxy = ENV['https_proxy']
+
+    devbox.vm.provision "setup_ansible", privileged: false, type: "shell" do |s|
+        s.path = "scripts/ansible_setup.sh"
+        s.args = '#{http_proxy} #{https_proxy}'
+    end
+
+    # Transfer script to apply public keys to XR that can be run later
+
+    devbox.vm.provision "transfer_apply_pubkey_sh", type: "file", source: "scripts/transfer_keys.py", destination: "/home/vagrant/transfer_keys.py"
+
+    devbox.vm.provision "trigger" do |trigger|
+      trigger.fire do
+        run "scripts/get_port_list.sh"
+        run_remote "python /home/vagrant/transfer_keys.py"
+      end
+    end
+
+  end
 end
